# xpmem

./: .travis.yml  Makefile.am  README  README.md  configure.ac  dkms.conf  module.in  xpmem-dkms.spec  xpmem-kmod.spec  xpmem-lib.spec  xpmem.pc.in
kernel/: Makefile.am  xpmem.service.in  xpmem_attach.c  xpmem_get.c  xpmem_main.c  xpmem_misc.c  xpmem_mmu_notifier.c  xpmem_pfn.c  xpmem_private.h
lib/: libxpmem.c
m4/: ac_path_kernel_source.m4
usr/: xpmem-kln.conf  xpmem.conf
